--- a/app/src/main/res/layout/flipview_sample_item.xml
+++ b/app/src/main/res/layout/flipview_sample_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.denzsbs.flipviewlib.FlipView
         android:id="@+id/flipView"
@@ -16,9 +15,7 @@
         android:minHeight="150dp"
         app:flipDuration="400"
         app:flipEnabled="true"
-        app:flipFrom="right"
-        app:flipOnTouch="false"
-        app:flipType="horizontal"
+        app:flipType="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,5 +57,6 @@
 
         </android.support.v7.widget.CardView>
     </com.denzsbs.flipviewlib.FlipView>
+
 
 </android.support.constraint.ConstraintLayout>
